# koi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  export.cmake  external.cmake
include/koi/: koi.hpp  version.hpp
include/koi/executor/: executor.hpp
include/koi/future/: index.hpp  log.hpp  stream.hpp
include/koi/future/ext/: future_ext.hpp  future_ext_impl.hpp  stream_ext.hpp  stream_ext_impl.hpp
include/koi/future/utils/: gather.hpp  lazy.hpp  shared.hpp
include/koi/impl/: fs.hpp
include/koi/runtime/current_thread/: runtime.hpp
include/koi/runtime/threadpool/: park.hpp  runtime.hpp
include/koi/sync/: mutex.hpp  queue.hpp
include/koi/traits/: function.hpp
include/koi/utils/: bomb.hpp  normalize.hpp  option.hpp  result.hpp  slab.hpp  slice.hpp  with.hpp
include/koi/uv/: errors.hpp  evented.hpp
src/: co.hpp  future.hpp  koi.hpp  main.cc  result.hpp  version.hpp
src/executor/: executor.hpp  park.hpp
src/fn/: function.hpp
src/future/: future.hpp  index.hpp  log.hpp  promise.hpp  std_hook.hpp  stream.hpp
src/future/decorator/: decorated.hpp  decorated_impl.hpp
src/future/ext/: future_ext.hpp  future_ext_impl.hpp  prune.hpp  stream_ext.hpp  stream_ext_impl.hpp
src/future/utils/: and_then.hpp  into_future.hpp  join.hpp  lazy.hpp  poll_fn.hpp  shared.hpp  stream_poll_fn.hpp  then.hpp
src/future/utils/c++2a/: async.hpp  promise.hpp  std_hook.hpp
src/impl/: fs.hpp  tcp.hpp
src/reactor/: reactor.hpp
src/runtime/: index.hpp  runtime.hpp
src/runtime/current_thread/: runtime.hpp
src/runtime/threadpool/: park.hpp  pool.hpp  runtime.hpp  worker.hpp
src/steal/: deque.hpp  worker.hpp
src/sync/: channel.hpp  mutex.hpp  parker.hpp  queue.hpp  slab.hpp
src/thread_pool/: park.hpp  pool.hpp  worker.hpp
src/traits/: concepts.hpp  function.hpp  util.hpp
src/utils/: bomb.hpp  nonnull.hpp  normalize.hpp  option.hpp  result.hpp  slab.hpp  with.hpp
src/uv/: errors.hpp  evented.hpp  events.hpp  handle.hpp  poll.hpp  request.hpp  stream.hpp
tests/: test_co.cc  test_result.cc
tests/executor/: test_parker.cc
tests/future/: test_and_then.cc  test_async.cc  test_lazy.cc  test_shared.cc  test_stream.cc  test_then.cc
tests/impl/: test_fs.cc  test_tcp.cc
tests/steal/: test_worker.cc
tests/sync/: test_channel.cc  test_mutex.cc  test_queue.cc  test_slab.cc
tests/traits/: test_function.cc
tests/utils/: test_option.cc  test_result.cc  test_slab.cc  test_with.cc
tests/uv/: test_poll.cc
(+4 files in other folders)
